--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.application.name=Backend
 spring.datasource.url=jdbc:mysql://localhost:3306/dblostandfound
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
 
 spring.datasource.username=root
 spring.datasource.password=
@@ -11,3 +13,6 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql=true
 
 server.error.include-stacktrace=never
+
+rsa.private-key=classpath:certs/private.pem
+rsa.public-key=classpath:certs/public.pem
