--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -12,6 +12,8 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql=true
 
+server.port=8080
+server.address=0.0.0.0
 server.error.include-stacktrace=never
 
 rsa.private-key=classpath:certs/private.pem
