Added Microsoft Login

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -16,5 +16,7 @@ server.port=8080
 server.address=0.0.0.0
 server.error.include-stacktrace=never
 
+spring.security.oauth2.client.provider.azure-dev.issuer-uri=https://login.microsoftonline.com/YOUR_TENANT_ID/v2.0
+
 rsa.private-key=classpath:certs/private.pem
 rsa.public-key=classpath:certs/public.pem
