--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -63,7 +63,12 @@
 			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
 			<version>3.4.2</version>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-client</artifactId>
+		</dependency>
+			
 		<dependency>
 			<groupId>com.nimbusds</groupId>
 			<artifactId>nimbus-jose-jwt</artifactId>
