--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -75,6 +75,13 @@
 			<version>10.0.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-http44</artifactId>
+			<version>1.37.0</version>
+		</dependency>
+
+
 
 	</dependencies>
 
