--- a/Frontend_web/package.json
+++ b/Frontend_web/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^6.4.1",
     "axios": "^1.7.9",
     "frontend": "file:",
+    "lucide-react": "^0.486.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3"
