--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,15 +1,13 @@
 spring.application.name=Backend
 
-spring.datasource.url=jdbc:mysql://localhost:3306/dblostandfound
-
+# Database configuration (uses environment variables if set)
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://mysql.apexhosting.gdn:3306/apexMC2775590}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:apexMC2775590}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:pLVf#JtyJ&h4olVP&EYsb57u}
 
-
-spring.datasource.username=root
-spring.datasource.password=
-
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 server.port=8080
