--- a/Frontend_web/package.json
+++ b/Frontend_web/package.json
@@ -16,11 +16,13 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.1",
     "@mui/material": "^6.4.1",
+    "@tailwindcss/vite": "^4.1.3",
     "axios": "^1.7.9",
     "frontend": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.3"
+    "react-router-dom": "^7.1.3",
+    "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
