--- a/Frontend_web/netlify.toml
+++ b/Frontend_web/netlify.toml
@@ -1,7 +1,7 @@
 [build]
-  base = "Frontend_web"
-  command = "cd Frontend_web && npm run build"
-  publish = "Frontend_web/dist"
+  base = "."
+  command = "npm run build"
+  publish = "dist"
   functions = "netlify/functions"
 
 [[redirects]]
