--- a/Frontend_app/gradle/libs.versions.toml
+++ b/Frontend_app/gradle/libs.versions.toml
@@ -16,6 +16,8 @@ lifecycle = "2.6.2"
 glide = "4.16.0"
 swiperefreshlayout = "1.1.0"
 camerax = "1.3.0"
+gson = "2.10.1"
+
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -36,6 +38,8 @@ okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 okhttp-logging = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
 
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
+gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
+
 
 androidx-camera-camera2 = { group = "androidx.camera", name = "camera-camera2", version.ref = "camerax" }
 androidx-camera-lifecycle = { group = "androidx.camera", name = "camera-lifecycle", version.ref = "camerax" }
