--- a/Frontend_app/gradle/libs.versions.toml
+++ b/Frontend_app/gradle/libs.versions.toml
@@ -17,6 +17,7 @@ glide = "4.16.0"
 swiperefreshlayout = "1.1.0"
 camerax = "1.3.0"
 gson = "2.10.1"
+firebase-bom = "32.2.2"
 
 
 [libraries]
@@ -40,6 +41,8 @@ okhttp-logging = { module = "com.squareup.okhttp3:logging-interceptor", version.
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
 
+firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebase-bom" }
+firebase-messaging = { module = "com.google.firebase:firebase-messaging", version.ref = "firebase-bom" }
 
 androidx-camera-camera2 = { group = "androidx.camera", name = "camera-camera2", version.ref = "camerax" }
 androidx-camera-lifecycle = { group = "androidx.camera", name = "camera-lifecycle", version.ref = "camerax" }
